# CORAL

./: CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/skills/coral-debug/: SKILL.md
.claude/skills/coral-extend/: SKILL.md
.claude/skills/coral-new-task/: SKILL.md
blog/: index.html
coral/: _version.py  config.py  user_agents.py
coral/agent/: manager.py  registry.py  runtime.py
coral/agent/builtin/: claude_code.py  (+5 more)
coral/cli/: __init__.py  _helpers.py  agents.py  start.py  ui.py
coral/hub/: heartbeat.py  notes.py
coral/template/: coral.md.template  identity_template.md
coral/web/: api.py  app.py
coral/workspace/: __init__.py  grader_env.py  project.py  user_isolation.py  worktree.py
docker/claude/: Dockerfile
docker/codex/: Dockerfile
docker/opencode/: Dockerfile
examples/: README.md
examples/dlomix-pfly/: task.yaml
examples/dlomix-pfly/grader/: pyproject.toml
examples/dlomix-pfly/grader/src/dlomix_pfly_grader/: __init__.py  grader.py
examples/dlomix-pfly/grader/src/dlomix_pfly_grader/data/: test_labels.parquet
examples/dlomix-pfly/seed/: pyproject.toml  solution.py
examples/dlomix-pfly/seed/data/: test.parquet  train.parquet  val.parquet
plugin/: AGENTS.md  README.md
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/agents/: coral-run-doctor.md  coral-task-author.md
plugin/hooks/: hooks-codex.json  session-start.py
tests/: test_cli_ui.py  test_config.py  test_grader_env.py  test_steering.py  test_user_agents.py  test_web_multi_island.py  test_workspace.py
(+35 files in other folders)
